social app done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <input type="radio"  id="female" name="gender" />
     <label for="female" class="radio">Female</label>
    </div> 
-   <p>By clicking Register, you agree on our <a href="#">terms and condition</a>.</p>
+   <p class="signuptext">By clicking Register, you agree on our <a href="#">terms and condition</a>.</p>
    <button class="button">Register</button>
   </form>
 </div>
